fix: eliminate unexpected horizontal/vertical scrollbar (#233)
* chore: update links in document according on the language

* refactor: extract TableFilter from oss to core

* Update TableFilter.jsx

* Update FilterSelector.jsx

* fix: fix TableFilter bugs

* fix: fix bugs in TableFilter

* fix: fix iframe url error in MetricsDashboard

* fix: fix bugs in IframeDashboard

* style: add support for manual sidebar switching between collapse and expand

* style: optimize sidebar to be fixed

* docs: enhance README with Alert Events workflows and new image


* Chore: dify login (#225)

* chore: dify-login

* fix:delete base url

* chore: change error message

* Update index.css

* fix: table i18n (#227)

* chore: update sidebar

* feat: add TraceId filter in Fault Logs & add viewLogs button in Fault Site Traces (#224)

* chore: update links in document according on the language

* refactor: extract TableFilter from oss to core

* Update TableFilter.jsx

* Update FilterSelector.jsx

* fix: fix TableFilter bugs

* fix: fix bugs in TableFilter

* fix: fix iframe url error in MetricsDashboard

* fix: fix bugs in IframeDashboard

* feat: add TraceId filter in Fault Logs

* feat: add viewLogs button in Fault Site Traces

* fix: eliminate unexpected horizontal/vertical scrollbar

* chore: update DefaultLayout

---------

--- a/frontend/src/core/layout/index.css
+++ b/frontend/src/core/layout/index.css
@@ -64,6 +64,7 @@
     scrollbar-width: none;
     -ms-overflow-style: none;
     -webkit-overflow-scrolling: touch;
+    transition: all 0.3s ease-in-out;
 }
 
 /* hide scrollbar */
